# medcr-ai-platform

./: .gitignore  .gitleaks.toml  README.md  docker-README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
.artifacts/26050654-8337-487d-a74e-4250bec55e76/: ai_platform_audit.artifact.md  architectural_audit.artifact.md  implementation_plan.artifact.md  task.artifact.md  walkthrough.artifact.md
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  ci.yml  dependency-review.yml  docker.yml  quality.yml  release.yml  security.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: di.py  main.py  test_gemini_adapter.py
backend/app/ai/document_pipeline/: reader.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: auth.py  documents.py  health.py  metrics.py  rag.py  tasks.py
backend/app/core/: config.py  constants.py  logger.py
backend/app/core/config/: __init__.py  base.py  development.py  loader.py  production.py  testing.py  validation.py
backend/app/core/observability/: __init__.py  cache_policy.py  concurrency.py  context.py  health.py  logger.py  metrics.py  middleware.py  profiler.py  resilience.py  resource_guard.py  telemetry.py
backend/app/core/security/: auth_service.py  authorization.py  dependencies.py  jwt.py  middleware.py  password.py  rate_limit.py  rate_limiter.py
backend/app/database/models/: __init__.py  tenant_sql.py
backend/app/domain/: __init__.py
backend/app/domain/models/: __init__.py  audit.py  authorization.py  background_task.py  chunk.py  document.py  evaluation.py  evidence.py  grounding.py  metadata.py  page.py  reasoning.py  retrieval.py  search_result.py  tenant.py  user.py
backend/app/domain/repositories/: __init__.py  background_tasks.py  benchmark_repository.py  cache_provider.py  chunk_repository.py  chunker.py  context_builder.py  conversation_repository.py  document_parser.py  document_repository.py  embedding_repository.py  keyword_retriever.py  llm_provider.py  metrics_provider.py  query_rewriter.py  rate_limiter.py  reranker.py  retriever.py  revocation_repository.py  storage_provider.py  tenant_repository.py  user_repository.py  vector_store_repository.py
backend/app/domain/repositories/audit/: audit_repository.py
backend/app/domain/repositories/security/: secret_provider.py
backend/app/infrastructure/background/: fastapi_background_tasks.py  redis_job_queue.py
backend/app/infrastructure/embeddings/: __init__.py  huggingface_adapter.py
backend/app/infrastructure/llm/: __init__.py  gemini_adapter.py
backend/app/infrastructure/observability/: ai_provider_health.py  prometheus_metrics.py  redis_health.py  storage_health.py  vector_store_health.py
backend/app/infrastructure/parser/: __init__.py  document_parser_adapter.py  langchain_chunker_adapter.py  semantic_chunker.py
backend/app/infrastructure/retrieval/: __init__.py  bm25_adapter.py  cross_encoder_adapter.py  hybrid_retriever_adapter.py
backend/app/infrastructure/security/: secret_providers.py
backend/app/infrastructure/storage/: __init__.py  database_foundation.py  filesystem_document_repository.py  local_storage_adapter.py  memory_benchmark_repository.py  memory_cache_provider.py  memory_conversation_repository.py  memory_revocation_repository.py  memory_tenant_repository.py  memory_user_repository.py  multi_level_cache_provider.py  noop_rate_limiter.py  redis_cache_provider.py  redis_client.py  redis_conversation_repository.py  redis_rate_limiter.py  redis_revocation_repository.py  redis_user_repository.py  sql_tenant_repository.py
backend/app/infrastructure/vectorstore/: __init__.py  faiss_repository.py
backend/app/prompts/: legal_prompt.py  query_rewrite_prompt.py
backend/app/schemas/: answer.py  chunk.py  page.py  question.py
backend/app/services/audit/: audit_service.py
backend/app/services/background/: worker_service.py
backend/app/services/cache/: cache_warming_service.py
backend/app/services/document/: chunker.py  cleaner.py  document_service.py  embeddings.py  parser.py  vector_store.py
backend/app/services/extraction/: pdf_extractor.py
backend/app/services/llm/: llm_service.py
backend/app/services/maintenance/: cleanup_service.py
backend/app/services/rag/: conversation_memory.py  evaluation_engine.py  grounding_engine.py  query_rewriter.py  rag_service.py  reasoning_engine.py
backend/app/services/retrieval/: bm25_retriever.py  context_builder.py  hybrid_retriever.py  query_rewriter.py  reranker.py  retrieval_service.py
backend/app/services/storage/: file_storage.py
backend/tests/: conftest.py  test_parser.py
backend/tests/core/: test_context.py
backend/tests/core/observability/: test_health.py  test_middleware.py  test_resource_guard.py
backend/tests/fixtures/: chunk_factory.py  fake_bm25_retriever.py  fake_embeddings.py  fake_hybrid_retriever.py  fake_llm_provider.py  fake_reranker.py  fake_vector_store.py  sample.docx
backend/tests/infrastructure/: test_ai_infrastructure.py
backend/tests/infrastructure/storage/: test_cache_providers.py  test_storage_layer.py
backend/tests/integration/: test_tenant_isolation.py
backend/tests/performance/: test_rag_performance.py
backend/tests/services/: test_enterprise_infrastructure.py
backend/tests/services/background/: test_worker_infrastructure.py
backend/tests/services/document/: test_chunker.py  test_parser.py  test_vector_store.py
backend/tests/services/rag/: test_evaluation_framework.py  test_evidence_engine.py  test_grounding_engine.py  test_legal_reasoning.py
backend/tests/services/retrieval/: test_bm25_retriever.py  test_hybrid_retriever.py  test_retrieval_intelligence.py  test_retrieval_service.py
docs/: CI_CD.md
docs/adr/: 0001-clean-architecture.md  0002-hybrid-retrieval.md  0003-redis-for-caching-and-sessions.md  0004-faiss-for-vector-search.md
docs/monitoring/: SLO_SLI.md
frontend/: CONTRIBUTING.md  README.md  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
k8s/: README.md
(+159 files in other folders)
