[project]
name = "medcr-ai-platform"
version = "1.0.0"
description = "Production-grade Legal AI RAG Platform"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = [
    "backend/tests",
]

python_files = [
    "test_*.py",
]

python_classes = [
    "Test*",
]

python_functions = [
    "test_*",
]

addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=backend/app",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
source = [
    "backend/app",
]

branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 2

exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]