[project]
name = "medcr-ai-platform"
version = "1.0.0"
description = "Production-grade Legal AI RAG Platform"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

python_files = [
    "test_*.py",
]

python_classes = [
    "Test*",
]

python_functions = [
    "test_*",
]

addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
source = [
    "app",
]

branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 2

exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused-function-argument
    "S",  # flake8-bandit (security)
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "S101", # use of assert detected (ok for tests)
    "UP006", # deprecated-type-alias (ignore for now)
    "UP035", # deprecated-import (ignore for now)
    "UP007", # non-pep604-annotation (ignore for now)
    "I001",  # unsorted-imports (ignore for now)
    "W292",  # no-newline-at-end-of-file
    "E701",  # multiple-statements-on-one-line
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "qdrant_client.*",
    "sentence_transformers.*",
    "prometheus_client.*",
    "neo4j.*",
    "motor.*",
    "faiss.*",
]
ignore_missing_imports = true
