[project]
name = "medcr-ai-platform"
version = "1.0.0"
description = "Production-grade Legal AI RAG Platform"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

python_files = [
    "test_*.py",
]

python_classes = [
    "Test*",
]

python_functions = [
    "test_*",
]

addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark async tests",
]

[tool.coverage.run]
source = [
    "app",
]

branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 2

exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused-function-argument
    "S",  # flake8-bandit (security)
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "S101", # use of assert detected (ok for tests)
    "UP006", # deprecated-type-alias
    "UP035", # deprecated-import
    "UP007", # non-pep604-annotation
    "I001",  # unsorted-imports
    "W292",  # no-newline-at-end-of-file
    "E701",  # multiple-statements-on-one-line
    "F401",  # unused-import
    "B904",  # raise-from-within-except-clause
    "S110",  # try-except-pass
    "S112",  # try-except-continue
    "ARG001", # unused-function-argument
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
# The codebase is incrementally adopting type annotations. Keep MyPy enabled in
# CI while avoiding strict-mode checks until the existing modules are typed.
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = false
ignore_missing_imports = true
# Type-check first-party modules without recursively analyzing third-party
# implementations, which are governed by their own typing support.
follow_imports = "skip"
# These diagnostics originate in established dynamic interfaces (dependency
# wiring, structured logging, optional metrics, and unstubbed libraries). They
# remain tracked for the gradual typing migration without blocking CI today.
disable_error_code = [
    "assignment",
    "attr-defined",
    "call-arg",
    "import-untyped",
    "operator",
    "return-value",
    "union-attr",
    "var-annotated",
]

[[tool.mypy.overrides]]
module = [
    "qdrant_client.*",
    "sentence_transformers.*",
    "prometheus_client.*",
    "neo4j.*",
    "motor.*",
    "faiss.*",
]
ignore_missing_imports = true
